2005-09-11  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimptoolbox.c (gimp_toolbox_book_added)
	(gimp_toolbox_book_removed): if there is no dockbook added, expand
	the separator and add a label telling the user that she can drop
	dockables there. Fixes bug #150593.

2005-09-11  Michael Natterer  <mitch@gimp.org>

	* app/core/core-enums.[ch] (enum GimpUndoType): replaced lots of
	bogus strings by properly translatable ones. Many of them are
	fallbacks anyway, but they should be presentable to the user.
	Fixes bug #315964.

2005-09-11  Michael Natterer  <mitch@gimp.org>

	* app/display/gimpstatusbar.c: don't include "core/gimpmarshal.h",
	replaced '_' by '-' in property name.

2005-09-11  Michael Natterer  <mitch@gimp.org>

	* plug-ins/script-fu/script-fu-interface.c (script_fu_response):
	bail out if the action_area is insensitive. Ignores attempts to
	close the window while the script is running. Fixes bug #308662.

2005-09-11  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpcontainerbox.c
	(gimp_container_box_set_size_request): take the container's
	border_width into account.

	* app/widgets/gimpcontainergridview.c
	(gimp_container_grid_view_init): make sure GTK_SHADOW_IN is set on
	the scrolled window, not on the viewport, so we get the same
	results for list and grid views when using
	gimp_container_box_set_size_request().

	* app/widgets/gimpcontainerpopup.[ch]: added setters and getters
	for view_type and preview_size, don't allow the preview to grow
	larger than the popup.

	* app/widgets/gimpviewablebutton.[ch]: added "popup-view-type" and
	"popup-preview-size" properties and setters/getters.

2005-09-10  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpviewablebox.c: factored out common code in
	preparation of fixing bug #315443.

	* app/widgets/gimpviewablebutton.h (struct GimpViewableButton):
	"popup_preview_size" is a gint, not a GimpViewType.

2005-09-10  Michael Natterer  <mitch@gimp.org>
